# construct

./: .gitignore  .travis.yml  CHANGELOG  CHANGES  CONTRIBUTORS  Dockerfile  MANIFEST.in  Pipfile  README.rst  appveyor.yml  debug_ui.py  install.bat  install.py  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.bat  tasks.py  test_ui.py  ui_tasks.py  uitests.py
.github/ISSUE_TEMPLATE/: feature-request-or-proposal.md  feature_request.md
casts/: .tmux.conf  README.rst  build.bat  convert.Dockerfile  convert.sh  record.Dockerfile  record.sh  tasks.py
casts/scripts/: new_project.yaml
construct/: __about__.py  __init__.py  action.py  actioncontext.py  actionhub.py  actionloop.py  actionparams.py  actionrunner.py  actions.py  api.py  compat.py  config.py  constants.py  construct.py  context.py  err.py  errors.py  events.py  extension.py  extensions.py  formatters.py  models.py  path.py  plugins.py  settings.py  signal.py  signals.py  stats.py  tasks.py  types.py  util.py  utils.py
construct/actions/: __init__.py  assets.py  project.py  publish.py  save.py  sequence.py  sequences.py  shots.py  tasks.py  templates.py  workspaces.py
docs/: Makefile  api.rst  cli.rst  concepts.rst  conf.py  configuration.rst  environment.rst  guide.rst  index.rst  make.bat
docs/html/: api.html  (+12 more)
sandbox/: _base.scss  _icons.scss  iconfont.py
tests/: __init__.py  test_actions.py  test_api.py  test_cache.py  test_context.py  test_extensions.py  test_io.py  test_migration.py  test_resources.py  test_settings.py  test_software.py  test_utils.py
(+195 files in other folders)
